--- a/contact.html
+++ b/contact.html
@@ -22,8 +22,8 @@
     <nav class="sticky top-0 z-50 bg-white/95 backdrop-blur-sm shadow-sm">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between items-center h-16 md:h-20">
-                <a href="index.html" class="text-2xl md:text-3xl font-bold text-black">
-                    <span class="text-[#F3BF00]">Koodi</span>
+                <a href="index.html" class="flex items-center">
+                    <img src="assets/images/logo.png" alt="Koodi" class="h-10 md:h-12">
                 </a>
                 
                 <div class="hidden md:flex items-center space-x-8">
@@ -38,6 +38,7 @@
                         </div>
                     </div>
                     <a href="blog.html" class="text-neutral-700 hover:text-black font-medium">Case Studies</a>
+                    <a href="faq.html" class="text-neutral-700 hover:text-black font-medium">FAQ</a>
                     <a href="contact.html" class="text-black font-semibold border-b-2 border-[#F3BF00]">Contact</a>
                 </div>
                 
@@ -53,7 +54,7 @@
     <!-- Mobile Menu -->
     <div id="mobile-menu" class="hidden fixed inset-0 z-50 bg-white">
         <div class="flex justify-between items-center p-4 border-b">
-            <span class="text-2xl font-bold"><span class="text-[#F3BF00]">Koodi</span></span>
+            <img src="assets/images/logo.png" alt="Koodi" class="h-10">
             <button id="close-menu-button" class="p-2">
                 <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
@@ -70,6 +71,7 @@
                 <a href="services/digital-transformation.html" class="block text-lg py-2 pl-4">Digital Transformation</a>
             </div>
             <a href="blog.html" class="block text-lg py-2">Case Studies</a>
+            <a href="faq.html" class="block text-lg py-2">FAQ</a>
             <a href="contact.html" class="block text-lg font-semibold text-black py-2">Contact</a>
         </div>
     </div>
@@ -286,7 +288,7 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="grid grid-cols-1 md:grid-cols-4 gap-8 mb-8">
                 <div>
-                    <h3 class="text-2xl font-bold mb-4"><span class="text-[#F3BF00]">Koodi</span></h3>
+                    <img src="assets/images/logo.png" alt="Koodi" class="h-12 mb-4">
                     <p class="text-neutral-400">AI automation and business process automation services that amplify your growth.</p>
                 </div>
                 <div>
@@ -302,6 +304,7 @@
                     <h4 class="font-semibold mb-4">Company</h4>
                     <ul class="space-y-2 text-neutral-400">
                         <li><a href="blog.html" class="hover:text-[#F3BF00] transition">Case Studies</a></li>
+                        <li><a href="faq.html" class="hover:text-[#F3BF00] transition">FAQ</a></li>
                         <li><a href="contact.html" class="hover:text-[#F3BF00] transition">Contact Us</a></li>
                     </ul>
                 </div>
