--- a/services/integration-api.html
+++ b/services/integration-api.html
@@ -22,9 +22,9 @@
             inset: 0;
             background-image: url('../assets/images/integration-api.png');
             background-size: cover;
-            background-position: right;
+            background-position: center;
             background-repeat: no-repeat;
-            opacity: 0.7;
+            opacity: 0.65;
             z-index: 0;
         }
 
@@ -32,20 +32,62 @@
             content: '';
             position: absolute;
             inset: 0;
-            background: linear-gradient(to bottom, rgba(255,255,255,0.95) 0%, rgba(255,255,255,0.7) 10%, transparent 25%, transparent 75%, rgba(255,255,255,0.7) 90%, rgba(255,255,255,0.95) 100%);
+            background: linear-gradient(to bottom, 
+                rgba(255,255,255,0.95) 0%, 
+                rgba(255,255,255,0.88) 5%, 
+                rgba(255,255,255,0.75) 15%, 
+                rgba(255,255,255,0.60) 30%, 
+                rgba(255,255,255,0.60) 70%, 
+                rgba(255,255,255,0.75) 85%, 
+                rgba(255,255,255,0.88) 95%, 
+                rgba(255,255,255,0.95) 100%);
             z-index: 0;
             pointer-events: none;
         }
 
+        @media (max-width: 768px) {
+            .hero-fade::before {
+                background-size: cover;
+                background-position: center;
+                opacity: 0.5;
+            }
+            .hero-fade::after {
+                background: linear-gradient(to bottom, 
+                    rgba(255,255,255,0.95) 0%, 
+                    rgba(255,255,255,0.90) 10%, 
+                    rgba(255,255,255,0.85) 20%, 
+                    rgba(255,255,255,0.85) 80%, 
+                    rgba(255,255,255,0.90) 90%, 
+                    rgba(255,255,255,0.95) 100%);
+            }
+        }
+
         @media (min-width: 1024px) {
             .hero-fade::before {
-                background-size: contain;
+                background-size: auto 75%;
+                background-position: right bottom;
+                opacity: 1;
+            }
+            .hero-fade::after {
+                background: linear-gradient(to right, 
+                    rgba(255,255,255,0.98) 0%, 
+                    rgba(255,255,255,0.95) 20%, 
+                    rgba(255,255,255,0.85) 35%, 
+                    rgba(255,255,255,0.70) 50%, 
+                    transparent 65%, 
+                    transparent 100%);
             }
         }
 
         .hero-fade > * {
             position: relative;
             z-index: 1;
+        }
+        
+        .hero-fade h1,
+        .hero-fade h2,
+        .hero-fade p {
+            text-shadow: 0 1px 3px rgba(255, 255, 255, 0.8);
         }
 
     </style>
