change image and hero positioning

--- a/index.html
+++ b/index.html
@@ -196,13 +196,13 @@
         <section
             class="hero-fade relative overflow-hidden bg-gradient-to-br from-white to-[#F3BF00]/20 py-16 md:py-24">
             <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-                <div class="text-center fade-in">
+                <div class="text-left fade-in">
                     <h1
                         class="text-4xl md:text-5xl lg:text-6xl font-bold text-black mb-6 leading-tight">
                         Automate the Work.<br>Amplify Your Growth.
                     </h1>
                     <p
-                        class="text-lg md:text-xl text-neutral-700 mb-8 max-w-3xl mx-auto">
+                        class="text-lg md:text-xl text-neutral-700 mb-8 max-w-3xl">
                         Koodi delivers AI automation services and business
                         process automation services that help you eliminate
                         operational bottlenecks and create smoother workdays.
@@ -211,7 +211,7 @@
                         consulting services that support your operations from
                         onboarding to reporting.
                     </p>
-                    <div class="flex flex-col sm:flex-row gap-4 justify-center">
+                    <div class="flex flex-col sm:flex-row gap-4 justify-start">
                         <a href="contact.html"
                             class="bg-[#F3BF00] text-black font-semibold px-8 py-4 rounded-xl shadow-md hover:brightness-110 transition">
                             Book a Free Consultation
