--- a/services/integration-api.html
+++ b/services/integration-api.html
@@ -191,7 +191,7 @@
         <section
             class="hero-fade relative overflow-hidden bg-gradient-to-br from-white to-[#F3BF00]/20 py-16 md:py-24">
             <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-                <div class="max-w-4xl mx-auto text-center fade-in">
+                <div class="max-w-4xl text-left fade-in">
                     <h1
                         class="text-4xl md:text-5xl lg:text-6xl font-bold text-black mb-6 leading-tight">
                         Connect Every Tool. Eliminate Every Silo.
@@ -203,7 +203,7 @@
                         between disconnected tools and gain real-time visibility
                         across your entire operation.
                     </p>
-                    <div class="flex flex-col sm:flex-row gap-4 justify-center">
+                    <div class="flex flex-col sm:flex-row gap-4 justify-start">
                         <a href="../contact.html"
                             class="bg-[#F3BF00] text-black font-semibold px-8 py-4 rounded-xl shadow-md hover:brightness-110 transition">
                             Book Your Integration Audit
