--- a/services/web-cms.html
+++ b/services/web-cms.html
@@ -192,7 +192,7 @@
         <section
             class="hero-fade relative overflow-hidden bg-gradient-to-br from-white to-[#F3BF00]/20 py-16 md:py-24">
             <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-                <div class="max-w-4xl mx-auto text-center fade-in">
+                <div class="max-w-4xl text-left fade-in">
                     <h1
                         class="text-4xl md:text-5xl lg:text-6xl font-bold text-black mb-6 leading-tight">
                         Turn Your Website into a Growth-Driving Hub
@@ -209,7 +209,7 @@
                         systems, and turn your website into a reliable engine
                         for growth.
                     </p>
-                    <div class="flex flex-col sm:flex-row gap-4 justify-center">
+                    <div class="flex flex-col sm:flex-row gap-4 justify-start">
                         <a href="../contact.html"
                             class="bg-[#F3BF00] text-black font-semibold px-8 py-4 rounded-xl shadow-md hover:brightness-110 transition">
                             Book a Free Website Audit Today
