--- a/services/ai-automation.html
+++ b/services/ai-automation.html
@@ -32,15 +32,15 @@
             content: '';
             position: absolute;
             inset: 0;
-            background: linear-gradient(to bottom, 
-                rgba(255,255,255,0.95) 0%, 
-                rgba(255,255,255,0.88) 5%, 
-                rgba(255,255,255,0.75) 15%, 
-                rgba(255,255,255,0.60) 30%, 
-                rgba(255,255,255,0.60) 70%, 
-                rgba(255,255,255,0.75) 85%, 
-                rgba(255,255,255,0.88) 95%, 
-                rgba(255,255,255,0.95) 100%);
+            background: linear-gradient(135deg, 
+                rgba(255,252,245,0.98) 0%,
+                rgba(255,250,235,0.95) 10%,
+                rgba(255,248,225,0.90) 20%,
+                rgba(255,245,210,0.85) 30%,
+                rgba(254,240,195,0.75) 50%,
+                rgba(253,235,180,0.65) 70%,
+                rgba(252,230,170,0.55) 85%,
+                rgba(250,225,160,0.45) 100%);
             z-index: 0;
             pointer-events: none;
         }
@@ -52,13 +52,14 @@
                 opacity: 0.5;
             }
             .hero-fade::after {
-                background: linear-gradient(to bottom, 
-                    rgba(255,255,255,0.95) 0%, 
-                    rgba(255,255,255,0.90) 10%, 
-                    rgba(255,255,255,0.85) 20%, 
-                    rgba(255,255,255,0.85) 80%, 
-                    rgba(255,255,255,0.90) 90%, 
-                    rgba(255,255,255,0.95) 100%);
+                background: linear-gradient(135deg, 
+                    rgba(255,252,245,0.98) 0%,
+                    rgba(255,250,235,0.95) 15%,
+                    rgba(255,248,225,0.92) 30%,
+                    rgba(255,245,210,0.88) 50%,
+                    rgba(254,242,200,0.85) 70%,
+                    rgba(253,238,190,0.82) 85%,
+                    rgba(252,235,180,0.80) 100%);
             }
         }
 
@@ -73,11 +74,14 @@
             }
             .hero-fade::after {
                 background: linear-gradient(to right, 
-                    rgba(255,255,255,1) 0%, 
-                    rgba(255,255,255,1) 45%, 
-                    rgba(255,255,255,0.3) 48%, 
-                    transparent 50%, 
-                    transparent 100%);
+                    rgba(255,252,245,1) 0%, 
+                    rgba(255,250,240,0.98) 20%,
+                    rgba(255,248,230,0.95) 35%,
+                    rgba(255,245,220,0.85) 45%,
+                    rgba(254,240,200,0.50) 55%,
+                    rgba(253,235,180,0.25) 65%,
+                    rgba(252,230,170,0.10) 75%,
+                    transparent 85%);
             }
         }
 
